final setup tweaks

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,14 +1,10 @@
+@import "~bulma/bulma";
+
 $Black: #161719;
 $White: #FEFEFE;
 $Grey: #E4E7EC;
 $Green: #00EDAE;
 
-$body-background-color: #FEFEFE;
-$body-color: #FFFFFF;
-$main-scheme: #FFFFFF;
-
-@import "~bulma/bulma";
-
-body {
-    background-color: $body-background-color !important;
+:root {
+    --bulma-body-background-color: $White;
 }
