--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -8,4 +8,5 @@
     --bulma-body-background-color: var(--white);
     --bulma-navbar-background-color: var(--black);
     --bulma-scheme-main: var(--black);
+    --bulma-navbar-h: var(--white);
 }
