more homepage shit.

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -54,10 +54,22 @@ p {
 }
 
 .button {
-    border-radius: 0px;
+    border-radius: 999rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    padding: 0.75rem 1.5rem;
 }
 
 .button.is-primary {
-    background-color: var(--green);
-    border-color: var(--green);
+    background-color: transparent !important;
+    border: 1px solid var(--green);
+    color: var(--white)
+}
+
+// accent and brand elements
+.simple-divider {
+    background: var(--gradient-green-blue);
+    height: 1px;
+    max-width: 2rem;
+    margin: 1.5rem 0;
 }
