solid progress on projects scroll, added some patterns

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -54,7 +54,7 @@ p {
 }
 
 .button {
-    border-radius: 999rem;
+    border-radius: 0;
     font-weight: 700;
     text-transform: capitalize;
     padding: 0.75rem 1.5rem;
@@ -70,10 +70,20 @@ p {
     }
 }
 
+.card {
+    background: #000;
+    box-shadow: none;
+    border: 2px solid#92929226;
+    background-image: url(https://cdn.dribbble.com/userupload/12298756/file/original-e2d245aa2def188b9ce241dcbc7228f9.jpg?resize=1600x1200);
+    background-position: center;
+    min-height: 24rem;
+    border-radius: 2rem;
+}
+
 // accent and brand elements
 .simple-divider {
     background: var(--gradient-green-blue);
     height: 1px;
-    max-width: 2rem;
+    width: 40px;
     margin: 1.5rem 0;
 }
