--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -54,6 +54,22 @@ p {
     color: var(--medium-emphasis-text);
 }
 
+// animations
+
+@keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+}
+
+// overrides
+
 .button {
     border-radius: 0;
     font-weight: 700;
@@ -95,7 +111,7 @@ p {
         border-radius: 999px;
         background-image: linear-gradient(90deg, rgb(66, 184, 131), rgb(62, 113, 250));
         background-size: 200% auto;
-        animation: gradient 2s infinite linear;
+        animation: gradient 3s ease-in-out infinite;
         opacity: .8;
     }
     &:hover {
@@ -109,9 +125,4 @@ p {
         margin-bottom: 2px;
         margin-left: -2px;
     }
-}
-
-@keyframes gradient {
-    0% { background-position: 100% 0; }
-    100% { background-position: 0 0; }
 }
