--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,4 +1,4 @@
-@import "~bulma/bulma";
+@use "bulma/bulma" as *;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 :root {
